fixtures/semantic/valid/hello.php
<?php

function hello_phase3(string $name): string
{
    return "Hello, " . $name;
}
