fixtures/semantic/invalid/missing-semicolon.php
<?php

function semantic_invalid(): int
{
    return 1
}
